Fixed edit profile z-index

--- a/pick_up_game_app/static/css/label.css
+++ b/pick_up_game_app/static/css/label.css
@@ -76,7 +76,6 @@ label {
 .event-details {
     width: 33%;
     border: 5px solid black;
-
 }
 
 .btn-primary {
@@ -142,7 +141,7 @@ label {
 
 .profile-buttons{
     position: relative;
-    z-index: 2;
+    z-index: 3;
     top: 75px;
     left: 10px;
     font-size: 20px;
@@ -184,5 +183,4 @@ label {
 .fixed-top{
     position: static;
 }
-
 
